<resources>
    <string name="app_name">"Handsfree"</string>
    <string name="reconnect">"Reconnect"</string>
    <string name="open_contacts">"Select contacts"</string>
    <string name="open_connectiq_store">"Open watch app in Connect IQ"</string>
    <string name="open_hints_for_background">"Run it in the background"</string>
    <string name="permissions_explanation_markdown">"## Introduction

Handsfree lets you keep your phone in your pocket while you make calls, allowing you to use Garmin watch for initiating and/or controlling the calls.

To have the best experience for making the calls from the watch, while leaving your phone in the pocket, it needs a few permissions from you: some of them are quite crucial, some not, please find the explanation for each of those below and grant them as necessary (please note that you can always adjust them at any point in time later via the app settings).

## Permissions

### Make and manage calls

To be able to initiate, observe and hangup calls from your watch, Handsfree needs permission from you to make and manage calls.

If you don't give this permission. Handsfree will have very little use, because it won't be able to do much with the calls on the phone for you.

### Access your call logs

To be able to identify the number of a call in progress, Handsfree needs access to your call logs.

If you give this permission, you will be able to see the number (and probably the contact name), on the watch.

If you don't give this permission, you'll see \"Unreadable\" instead of the number or the contact name for calls in progress.

### Access your contacts

To let you see the predefined list of the contacts that you can use for outgoing calls on your watch, as well as to display a matching contact name during a call in progress, on your watch, Handsfree needs permission to access your contacts.

If you don't give this permission, you won't be able to dial the contacts from the watch.

### Display over other apps

To be able to make calls via the standard phone app while running in the background, Handsfree needs the permission to display over other apps.

If you don't give this permission, Handsfree will not be able to make calls when it is not the frontmost application or when the phone is locked. This permission is not necessary for observing or hanging up calls in progress though.

### Always run in background

To be able to serve your requests while it's not the frontmost application, Handsfree needs the permission to always run in background.

If you don't give this permission, you'll still be able to use it in foreground, but it will be stopped by the system soon after you switch to other apps.

### Send you notifications

To be able to serve your request while working in background, Handsfree needs the permission to show you a notification. This is a measure for you to be sure that it's running in the background/awaiting for your requests from the watch. It also shows you a bit of current status of the connection to your watch.

If you don't give this permission, you'll still be able to use it in foreground, but it will be eventually stopped by the system after the app is put into the background, as it's required for these kinds of apps running in the background to always show the notification.

"</string>
    <string name="permissions_dialog_proceed_title">"Handsfree permissions"</string>
    <string name="permissions_dialog_proceed_btn">"Grant permissions"</string>
    <string name="permissions_dialog_app_settings_btn">"App settings"</string>
    <string name="permissions_dialog_do_not_proceed_btn">"Cancel"</string>
    <string name="permissions_dialog_all_granted_title">"Handsfree permissions"</string>
    <string name="permissions_dialog_all_granted_ok_btn">"OK"</string>
    <string name="app_logo_description">"App logo"</string>
    <string name="onboarding_essentials">"# Control calls from the watch

As a bare minimum, Handsfree lets you observe and hangup calls in progress, without sharing any personal information with the watch. The only information that is shared is the fact that there's an unidentified call in progress.

To provide this minimum functionality, Handsfree needs a few essential permissions from you.

### [Make and manage calls](permissions://?manifest=android.permission.CALL_PHONE,android.permission.ANSWER_PHONE_CALLS,android.permission.READ_PHONE_STATE)

To be able to observe and hangup calls from your watch, Handsfree needs the permission from you to make and manage calls.

Without the permission, Handsfree won't be able to perform much of its job, as it won't be able to see a call in progress to show you the call status on the watch, neither it would be able to hangup a call on your request from the watch.

### [Always run in background](permissions://?battery_optimization)

To be able to serve your requests while it's not the frontmost application, Handsfree needs the permission to always run in background.

Without the permission, you'll still be able to use it while it's in the foreground, but it will be stopped by the system soon after you switch to other apps or e.g. lock your phone.

### [Send you notifications](permissions://?manifest=android.permission.POST_NOTIFICATIONS)

To be able to serve your request while working in background, Handsfree needs the permission to show you a notification. This is a measure for you to be sure that it's running in the background/awaiting for your requests from the watch. It also shows you a bit of current status of the connection to your watch.

Without the permission, the system will stop Handsfree soon after it switches to the background.

## Running it in the background

Besides the above permissions, to let Handsfree run without interruptions, check **[the known hints for running Android apps in background, on your particular phone model](do://doki).**

"</string>
    <string name="onboarding_outgoing_calls">"# Allow outgoing calls

Handsfree lets you make outgoing calls from the watch for your [starred contacts](contacts://starred) or for your recent calls, by redirecting your requests from the watch to the default phone application.

Beware that even though you can open starred contacts from Handsfree, it has no access to the list until you give it the permission to access the list.

If you want to use outgoing calls on your watch, you need to give Handsfree a few permissions, **in addition** to the [essential ones](link://onboarding_essentials).

### [Display over other apps](permissions://?draw_overlays)

To be able to make calls via the default phone app while running in the background, Handsfree needs the permission to display over other apps.

Without the permission, Handsfree won't be able to make calls for you, when it is not the frontmost application or when the phone is locked. This permission is not necessary for observing or hanging up calls in progress though.



"</string>
    <string name="navigation_onboarding">"Configuration"</string>
    <string name="onboarding_intro">"Version {{version_info}}

### [Troubleshooting](link://onboarding_troubleshooting)

### [Project home](https://github.com/grigorye/Handsfree)

### Getting Handsfree on a Garmin device

A. [Handsfree app](https://apps.garmin.com/en-US/apps/73107243-f322-4cf2-bb3d-78f2a4ee8920) for recent devices (not older than 2022), that have support for glances in apps:

[&lt;img src=\"./badges/Connect-IQ/Connect-IQ-Badge_White.svg\" max-height=\"160\" alt=\"Open Connect IQ\"/&gt;](https://apps.garmin.com/en-US/apps/73107243-f322-4cf2-bb3d-78f2a4ee8920)

B. [Handsfree widget](https://apps.garmin.com/apps/629f3ba5-66bc-4b44-a078-3365a85212f8) for *older generations* of Garmin devices:

[&lt;img src=\"./badges/Connect-IQ/Connect-IQ-Badge_White.svg\" max-height=\"160\" alt=\"Open Connect IQ\"/&gt;](https://apps.garmin.com/apps/629f3ba5-66bc-4b44-a078-3365a85212f8)

### Keeping Handsfree companion up to date

A. With Google Play:

[&lt;img src=\"./badges/Google-Play/Get-It-On-Google-Play-Badge_en.svg\" max-height=\"160\" alt=\"Get it on Google Play\"/&gt;](https://play.google.com/store/apps/details?id=com.gentin.connectiq.handsfree) 

B. If you prefer to not depend on Google Play, you can install the latest version of the app using the link below:

#### [Install the latest version without Google Play](https://grigorye.github.io/handsfree/Installation)

### Beta testing

If you're interested in beta testing, please send a request to join the [dedicated Google group](https://groups.google.com/g/handsfree-beta).

### Feedback

Reach to &lt;garmin9E96E@icloud.com&gt; or the [beta testing group](https://groups.google.com/g/handsfree-beta). All the feedback is highly appreciated.

"</string>
    <string name="navigation_overview">"About"</string>
    <string name="permissions_snackbar_app_settings_btn">"App Settings"</string>
    <string name="overview_snackbar_reconnecting_connectiq">"Reconnecting…"</string>
    <string name="permissions_snackbar_permission_is_already_granted">"The permission is already there."</string>
    <string name="permissions_snackbar_permission_is_denied">"The permission is available in App Settings."</string>
    <string name="settings_essentials">"Call control"</string>
    <string name="settings_essentials_on">"Calls can be observed and hang up on the watch."</string>
    <string name="settings_essentials_off">"No calls are enabled on the watch."</string>
    <string name="settings_contacts">"🟢 Phonebook"</string>
    <string name="settings_contacts_on">"Some contacts are starred and should be available on the watch."</string>
    <string name="settings_contacts_off">"**Starred** contacts make the list for dialing from the watch."</string>
    <string name="settings_outgoing_calls">"Outgoing calls"</string>
    <string name="settings_outgoing_calls_off">"Making calls is not possible on the watch."</string>
    <string name="settings_outgoing_calls_on">"Making calls is possible on the watch."</string>
    <string name="settings_disabled_due_to_essentials_are_off">"Disabled due to basic call control is off."</string>
    <string name="settings_essentials_group">"Essentials"</string>
    <string name="settings_extras_group">"Extras"</string>
    <string name="settings_devices_group">"Devices"</string>
    <string name="settings_call_info">"Caller ID"</string>
    <string name="settings_call_info_off">"No phone numbers or names are shown on the watch."</string>
</resources>