<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/settings_devices_group"
        app:iconSpaceReserved="false">
        <Preference
            app:iconSpaceReserved="false"
            app:key="devices"
            app:summary="Connected"
            app:title="fenix 7" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/settings_essentials_group"
        app:iconSpaceReserved="false">
        <Preference
            app:iconSpaceReserved="false"
            app:key="essentials"
            app:summary="@string/settings_essentials_off"
            app:title="@string/settings_essentials" />
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_extras_group"
        app:iconSpaceReserved="false">
        <Preference
            app:dependency="essentials"
            app:iconSpaceReserved="false"
            app:key="full_featured"
            app:summary="@string/settings_call_info_off"
            app:title="@string/settings_call_info" />
        <Preference
            app:dependency="essentials"
            app:enabled="false"
            app:iconSpaceReserved="false"
            app:key="outgoing_calls"
            app:summary="@string/settings_outgoing_calls_off"
            app:title="@string/settings_outgoing_calls" />
        <Preference
            app:iconSpaceReserved="false"
            app:key="contacts"
            app:summary="@string/settings_contacts_off"
            app:title="@string/settings_contacts" />
    </PreferenceCategory>
</PreferenceScreen>