<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/onboarding_home">

    <fragment
        android:id="@+id/onboarding_home"
        android:name="com.gentin.connectiq.handsfree.onboarding.OnboardingStepFragment"
        android:label="@string/navigation_onboarding"
        tools:layout="@layout/fragment_onboarding_step">
        <argument
            android:name="markdown"
            android:defaultValue="@string/onboarding_welcome"
            app:argType="reference" />
        <argument
            android:name="navigationLabel"
            android:defaultValue="Home"
            app:argType="string" />
        <action
            android:id="@+id/link"
            app:destination="@id/inner_onboarding_step"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/inner_onboarding_step"
        android:name="com.gentin.connectiq.handsfree.onboarding.OnboardingStepFragment"
        android:label="@string/navigation_onboarding"
        tools:layout="@layout/fragment_onboarding_step">
        <argument
            android:name="markdown"
            app:argType="reference" />
        <argument
            android:name="navigationLabel"
            app:argType="string" />
        <action
            android:id="@+id/link"
            app:destination="@id/inner_onboarding_step"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>
    <fragment
        android:id="@+id/overview_home"
        android:name="com.gentin.connectiq.handsfree.onboarding.OnboardingStepFragment"
        android:label="@string/navigation_overview"
        tools:layout="@layout/fragment_onboarding_step" >
        <argument
            android:name="markdown"
            app:argType="reference"
            android:defaultValue="@string/onboarding_intro" />
    </fragment>

</navigation>